--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -10,6 +10,8 @@ jobs:
     name: "Package"
     runs-on: "ubuntu-latest"
     container: ghcr.io/rdf-stax/ci-worker:main
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
