--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -25,12 +25,6 @@ jobs:
       - name: Generate documentation
         run: python /app/tasks/doc_gen.py output/stax.ttl output
 
-      - name: Upload output artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: output
-          path: output/
-
       - name: Upload files for the release
         uses: ncipollo/release-action@v1.13.0
         with:
@@ -43,3 +37,8 @@ jobs:
           name: "Development pre-release"
           artifacts: 'output/*'
           generateReleaseNotes: true
+
+  call-publish:
+    uses: ./.github/workflows/publish.yml
+    with:
+      tag: dev
