--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -37,6 +37,7 @@ jobs:
           generateReleaseNotes: true
 
   call-publish:
+    needs: package
     uses: ./.github/workflows/publish.yml
     with:
       tag: "${{ env.GITHUB_REF_NAME }}"
