--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,9 @@ jobs:
           cache: pip
           cache-dependency-path: 'requirements.txt'
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt 
+
       - name: Download ontology docs
         run: |
           TAG='${{ inputs.tag }}'
