--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -40,6 +40,6 @@ jobs:
     needs: package
     uses: ./.github/workflows/publish.yml
     with:
-      tag: "${{ env.GITHUB_REF_NAME }}"
+      tag: "${{ github.ref_name }}"
     permissions:
       contents: write
