Fix carrying over links.md

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           TAG='${{ inputs.tag }}'
           wget https://github.com/RDF-STaX/rdf-stax.github.io/releases/download/$TAG/docs.html -O docs/includes/docs.html
+          wget https://github.com/RDF-STaX/rdf-stax.github.io/releases/download/$TAG/links.md -O docs/includes/links.md
 
       - name: Deploy site
         run: |
