--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,4 +19,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Validate ontology's profile
-        run: java -jar /app/robot.jar validate-profile --input src/stax.ttl --profile DL --output dl-validation.txt
+        run: |
+          java -jar /app/robot.jar validate-profile --input src/stax.ttl --profile DL --output dl-validation.txt
+          cat dl-validation.txt
