--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 repo_url: https://github.com/RDF-STaX/rdf-stax.github.io
 repo_name: RDF-STaX/rdf-stax.github.io
