--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -23,7 +23,24 @@ jobs:
         run: python /app/tasks/package.py stax/src output dev
 
       - name: Generate documentation
-        run: python /app/tasks/doc_gen.py output/stax.ttl output dev
+        run: |
+          python /app/tasks/doc_gen.py output/stax.ttl output dev
+          mkdir cache
+
+      - name: Restore nanopub cache
+        uses: actions/cache/restore@v3
+        with:
+          path: cache
+          key: nanopubs
+
+      - name: Fetch nanopublications
+        run: python /app/tasks/nanopub_fetch.py cache output dev
+
+      - name: Save nanopub cache
+        uses: actions/cache/save@v3
+        with:
+          path: cache
+          key: nanopubs
 
       - name: Upload files for the release
         uses: ncipollo/release-action@v1.13.0
