This isn't working – reverting
Issue: #14

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,7 +84,7 @@ theme:
 extra:
   version:
     provider: mike
-    default: latest
+    default: dev
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/RDF-STaX
