Attempt to fix CI, again

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,7 +83,7 @@ theme:
 extra:
   version:
     provider: mike
-    default: dev
+    default: latest
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/RDF-STaX
