--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,7 +83,9 @@ theme:
 extra:
   version:
     provider: mike
-    default: latest
+    default: 
+      - latest
+      - stable
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/RDF-STaX
