--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,7 @@ jobs:
           wget https://github.com/RDF-STaX/rdf-stax.github.io/releases/download/$TAG/docs.html -O docs/includes/docs.html
           wget https://github.com/RDF-STaX/rdf-stax.github.io/releases/download/$TAG/links.md -O docs/includes/links.md
           wget https://github.com/RDF-STaX/rdf-stax.github.io/releases/download/$TAG/nanopub_links.md -O docs/includes/nanopub_links.md
+          wget https://github.com/RDF-STaX/rdf-stax.github.io/releases/download/$TAG/tests.md -O docs/includes/tests.md
 
       - name: Deploy site
         run: |
