--- a/tests/uc1/cq1-2.yaml
+++ b/tests/uc1/cq1-2.yaml
@@ -1,5 +1,6 @@
 $schema: https://w3id.org/stax/dev/schema/cq-test
 useCase: 1
 testNumber: 2
-text: What are the names of all RDF stream types?
-expectation: nonEmpty
+text: What is the definition for each stream type?
+expectation:
+  resultsCount: 10
